# pghaskell

./: .gitignore  README  pghaskell--0.1.sql  pghaskell.control  rebuild.sh  stack.yaml
common/include/pghaskell/: types.h
pghaskell/: .dir-locals.el  LICENSE  configure  pghaskell.cabal  pghaskell.control
pghaskell-internal/: ChangeLog.md  LICENSE  pghaskell-internal.cabal
pghaskell-internal/c_bits/: pghaskell
pghaskell-internal/src/PgHaskell/: Elog.hs  Internal.hs  Types.hs
pghaskell-internal/src/PgHaskell/Internal/: Argument.hs  Elog.hs  Errors.hs  InlineC.hs  Postgre.hs  Types.hs  Types.hsc
pghaskell/c_bits/: dummy.c  foreign.h  pghaskell.c  pghaskell.h
pghaskell/src/: Types.hs
pghaskell/src/PgHaskell/: CTypes.hsc  Compiler.hs  Foreign.hs  Types.hs
pghaskell/src/PgHaskell/Compiler/: Context.hs
