name:                pghaskell
version:             0.1
synopsis:            Haskell as a procedural language for PostgreSQL
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Lana Black
maintainer:          lanablack@amok.cc
-- copyright:           
category:            Database
build-type:          Simple
cabal-version:       >=2.0

flag dummy
  description:         Enable dummy C code
  default:             False

flag debug
  description:         Build with debugging symbols

foreign-library pghaskell
  type:                native-shared
  other-modules:       PgHaskell.Compiler,
                       PgHaskell.Compiler.Context,
                       PgHaskell.CTypes,
                       PgHaskell.Foreign,
                       PgHaskell.Types
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <5,
                       array,
                       bytestring,
                       containers,
                       haskell-src-exts >= 1.18,
                       hint,
                       inline-c,
                       pghaskell-internal == 0.1,
                       text
  if flag(dummy)
    c-sources:         c_bits/pghaskell.c c_bits/dummy.c
  else
    c-sources:         c_bits/pghaskell.c
  if flag(debug)
    cc-options:          -Wall -fPIC -std=c11 -ggdb -O0
    ghc-options:         -Wall -g
  else
    cc-options:          -Wall -Werror -fPIC -std=c11
    ghc-options:         -Wall -Werror
  include-dirs:        /usr/include/postgresql /usr/include/postgresql/server c_bits

library
  exposed-modules:     PgHaskell.Compiler,
                       PgHaskell.CTypes,
                       PgHaskell.Foreign,
                       PgHaskell.Types

  other-modules:       PgHaskell.Compiler.Context

  -- other-extensions:    
  build-depends:       base >=4.8 && <5,
                       array,
                       bytestring,
                       containers,
                       haskell-src-exts >= 1.18,
                       hint,
                       inline-c,
                       pghaskell-internal == 0.1,
                       text
  hs-source-dirs:      src
  if flag(dummy)
    c-sources:         c_bits/pghaskell.c c_bits/dummy.c
  else
    c-sources:         c_bits/pghaskell.c
  if flag(debug)
    cc-options:          -Wall -fPIC -std=c11 -ggdb -O0
    ghc-options:         -Wall -g
  else
    cc-options:          -Wall -Werror -fPIC -std=c11
    ghc-options:         -Wall -Werror
  default-language:    Haskell2010
  include-dirs:        /usr/include/postgresql /usr/include/postgresql/server c_bits
  ld-options:          -Wl,-soname=libpghaskell.so
